--- a/css/stylesBooki2.css
+++ b/css/stylesBooki2.css
@@ -21,7 +21,8 @@ body {
 h2 {
     font-weight: bold;
     font-size: large;
-}/*diminuer espace interligne*/
+    margin:0;
+}
 
 h3 {
 	font-weight: bold;
@@ -38,7 +39,7 @@ p {
 }
 
 
-/*---VERSION DESKTOP---*/
+/*---Header VERSION DESKTOP---*/
 
 header {
     display: flex;
@@ -75,17 +76,55 @@ ul {
 a {
 	text-decoration: none ;
 	color: black;
+    padding: 12.5px;
 }
 
 nav a:hover {
 	color:#0065FC;
-} /* version mobile > nav a:hover {border-bottom : 2px solid #0065FC;}
+    border-top: 2px solid #0065FC;
+}
 	
 
+/*---VERSION TABLETTE
+@media screen and (min-width:768px) and (max-width:991px) {}
+---*/
 
-/*---Conteneur-introduction 
-      Barre de recherche
-      Filtres---*/
+
+/*---Header VERSION MOBILE---*/
+
+@media screen and (max-width:767px) {
+    
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 2.5%;   
+    } 
+    
+    .logo {
+        display: flex;
+        justify-content: center;
+        padding: 2.5%;   
+    } 
+
+    .logo img {
+        width : 25%;
+     }
+
+    nav>ul {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    nav a:hover {
+        border-bottom: 2px solid #0065FC;
+        color:#0065FC;
+    }
+
+}
+
+
+/*---CONTENEUR-INTRODUCTION ---*/
 
 .conteneur-introduction {
     display: flex;
@@ -93,43 +132,53 @@ nav a:hover {
     padding-left: 2.5%;
 }
 
-/*display: inline-block;*//* position: absolute; z-index : 1;*/
+/*---Barre de recherche ---*/
 .barre-recherche {
-    box-sizing: content-box;
     display: flex;
-    justify-content: center;
-    height: 5%;
-    width: 30%;
-    margin: 1.25%, 1.25%;
+    justify-content: flex-start;
+    height:50px;
+    width: 290px;
     border: 1px solid #F2F2F2;
     border-radius: 30px;
-    background-color: #F2F2F2;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .localisation {
-    margin: auto;
+    box-sizing: border-box;
+    height:50px;
+    width: 50px;
+    display: block;
+    justify-content:center;
+    padding: 12.5px;
     background-color: #F2F2F2;
-    padding:1.25%;
 }
-
-input [type=text] {
-    border: none;
-   -webkit-appearance: none; 
-   -webkit-input-placeholder: black small bold;
-} /* ça ne change rien*/
 
 .selection {
-    height: 5%;
-    width: 30%;
+    box-sizing: border-box;
+    height: 50px;
+    width: 168px;
 }
- 
+
+::placeholder {
+    border: none;
+    color: black;
+    font-weight: bold;
+    font-size: small;
+    padding-left: 25px;
+}
+
 .bouton-texte {
+    height:50px;
+    width: 72px;
     background-color:#0065FC;
 	color:white;
-	text-align: center;
+	font-weight: bold;
+    font-size: small;
+    text-align: center;
 } 
 
-.bouton-recherche:hover {
+.bouton-texte:hover {
 	color : black;
     background-color:#DEEBFF;
 }
@@ -138,51 +187,86 @@ input [type=text] {
     display: none;
 }
 
+@media screen and (max-width:767px) {
+  .bouton-texte {
+    display: none;
+    }
+
+    .Bouton-icone {
+    background-color: #0065FC;
+    display: block;
+    justify-content: center;
+    }
+
+    .i {
+    color: white;
+    }
+}
+
+
+/*FILTRES*/
 .filtres {
     display: flex;
-    flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
-    gap:2.5%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    align-items: baseline;
+    gap: 12.5px;
 }
 
 .filtre-box {
-    width: 75%;
-    display: flex;
-    flex-direction: row;
+    display: block;
     justify-content: flex-start;
-    gap:5%;
+    align-items: baseline;
+    border: 2px solid #F2F2F2;
+    border-radius: 50px;
+    padding: 5px 0px 5px 0px;
+    
 }
-
-.filtre-icone-text {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    border: 1px solid #F2F2F2;
-    border-radius: 30px;
+.filtre-icone {
+    object-position: left;
+    height: 45px;
+    width: 45px;
+    padding: 8px;
+    border-radius: 50%;
+    background-color: #DEEBFF;
+    color:#0065FC;
 }
 
 .filtre-texte {
+    object-position: center;
+    height: 40px;
+    width: 40px;
     font-weight: bold;
     font-size: small;
+    padding: 8px 8px 8px 0px ;
 }
 
-/* ajouter: changement apparence au survol :
-	.filtres a:hover {font-style: italic ; color: #0065FC; background-color: #F2F2F2}*/
+.filtre-box a:hover {
+    color: #0065FC; 
+}
 
+.circle-info {
+    padding-bottom: 25px;
+    padding-top: 25px;
+    font-size: x-small;
+}
+.circle-info>i {
+    background-color:white;
+    border-color: solid 2px #F2F2F2;
+    border-radius: 50%;
+    padding: 3px;
+    margin-right: 10px;
+    color: #0065FC;
+}
 
 /*---Conteneur-hebergements et les plus populaires--*/
 
 #conteneur-hebergements-populaires {
-    box-sizing: border-box;
     width:100%;
     height: 30%;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space space-between;
+    justify-content: space-between;
     padding: 2.5%;
+    box-sizing: border-box;
 }
 
 /*.hebergements:nth-child(1) {
@@ -194,62 +278,117 @@ input [type=text] {
 
 
 /*---Sous conteneur Hébergements--*/
+
 .bloc-hebergements {
     box-sizing: border-box;
-    max-width: 60%;
-    max-height: 25%;
+    padding: 25 px; 
+    max-width: 600px;
+    max-height: 400px;
     display: flex;
-    flex-direction: row wrap;
-    justify-content: space-between;
-    padding: 2.5%px; 
-    border-radius: 5%;
+    flex-direction: column;
+    /*justify-content: space-between;*/
+    border-radius: 10%;
     background-color: #F2F2F2;
 }
+
+/*.bloc-hebergements {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: 400px;
+    background-color: #F2F2F2;
+    padding: 25px;
+}*/
 
 .bloc-hebergements>h1 {
     display: flex;
     text-align: left;
 }
 
-.bloc-hebergements>.liste-hebergements {
-    box-sizing: border-box;
+.bloc-hebergements>h2 {
+    display: flex;
+    text-align: left;
+}
+
+.bloc-hebergements>.articles {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between; 
+    align-items: flex-start;
+    row-gap: 12.5px;
+}
+.bloc-hebergements>.articles>.carte-hebergements {
     display: flex;
     flex-direction: column;
-    row-gap: 25px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 173.5px;
+    height: 135px;
     background-color: white;
     border: 2px solid white;
     border-radius: 10%;
 }
 
-.bloc-hebergements>.liste-hebergements {
-    flex-basis: 0 0 33.3333%;
-}
-.liste-hebergements>img {
+.bloc-hebergements>.articles>.carte-hebergements>.carte-image {
     display: flex;
-    max-width: 15%x;
-    height: 86px;
+    max-width: 173.5px;
+    height: 77px;
     object-fit: cover;
     object-position: top center;
-    border-top-left-radius: 10%;
-    border-top-right-radius: 10%;
 }
+
+/*.bloc-hebergements>.carte-hebergements {
+    display: block;
+    width: 173.5px;
+    height: 135px;
+    margin: 0px / auto;
+    background-color: white;
+    border: 2px solid white;
+    border-radius: 10%;
+   
+    //display: block;
+    position: relative;
+    overflow: hidden;
+    box-sizing: border-box;//
+
+ .carte-hebergements>.carte-image {
+    height: 77px;
+    position: relative;
+    overflow: hidden;}  
+
+.carte-hebergements>.carte-image>img {
+   // width: 168.5px;
+    height: 86px ;//
+    width: 150%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate (-50%, -50%);
+    /*object-fit: cover;
+    object-position: top center;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;*/
+    
+/*.bloc-hebergements>.carte-hebergements {
+    flex-basis: 0 0 33.3333%;*/   
 
 
 /*---Sous-conteneur Les plus populaires--*/
 .bloc-populaires {
     box-sizing: border-box;
+    padding: 25px;
     max-width: 30%;
     max-height: 30%;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
-    padding: 2.5%;
-    border-radius: 5%;
+    border-radius: 10%;
     background-color: #F2F2F2;
 }
 
-
-.bloc-populaires>.liste-hebergements {
+.bloc-populaires>.carte-hebergements {
     box-sizing: border-box;
     max-width: 14%;
     max-height: 9% ;
@@ -264,8 +403,7 @@ input [type=text] {
     border-radius: 20%;
 }
 
-.liste-populaires>img {
-    display: flex;
+.carte-populaires>img {
     max-width: 13%px;
     height: 13%;
     object-fit: cover;
@@ -273,7 +411,7 @@ input [type=text] {
     border-top-left-radius: 20%;
     border-bottom-left-radius: 20%;
 }
-
+*/
 
 /*---Conteneur Activités---*/
 #conteneur-activite {
@@ -286,7 +424,7 @@ input [type=text] {
     background-color: white;
 }
 
-.liste-activites>img {
+.carte-activites>img {
     display: flex;
     max-width: 20%;
     flex-direction: column;
