--- a/css/stylesBooki2.css
+++ b/css/stylesBooki2.css
@@ -21,21 +21,24 @@ body {
 h2 {
     font-weight: bold;
     font-size: large;
-    margin:0;
+    margin:0px;
 }
 
 h3 {
 	font-weight: bold;
 	font-size:small;
+    margin:0px;
  	}
 
 h4 {
     font-weight: bold;
-	font-size:small;
+	font-size: x-small;
+    margin: 5px 0px 5px 2.5px;
 }
 
 p {
 	font-size: x-small;
+    margin: 2.5px ;
 }
 
 
@@ -77,6 +80,7 @@ a {
 	text-decoration: none ;
 	color: black;
     padding: 12.5px;
+    cursor: pointer;
 }
 
 nav a:hover {
@@ -176,6 +180,7 @@ nav a:hover {
 	font-weight: bold;
     font-size: small;
     text-align: center;
+    cursor: pointer;
 } 
 
 .bouton-texte:hover {
@@ -196,6 +201,7 @@ nav a:hover {
     background-color: #0065FC;
     display: block;
     justify-content: center;
+    cursor: pointer;
     }
 
     .i {
@@ -260,180 +266,165 @@ nav a:hover {
 
 /*---Conteneur-hebergements et les plus populaires--*/
 
-#conteneur-hebergements-populaires {
-    width:100%;
-    height: 30%;
-    display: flex;
-    justify-content: space-between;
-    padding: 2.5%;
-    box-sizing: border-box;
-}
-
-/*.hebergements:nth-child(1) {
-    flex: 2;
-}
-.populaires:nth-child(2) {
-    flex: 1;
-}*/
-
 
 /*---Sous conteneur Hébergements--*/
 
+#conteneur-hebergements-populaires {   
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    margin: 0px 25px 25px 25px;
+}
+
 .bloc-hebergements {
     box-sizing: border-box;
-    padding: 25 px; 
-    max-width: 600px;
-    max-height: 400px;
+    /*width: 61%;
+    height:30%;*/
     display: flex;
     flex-direction: column;
-    /*justify-content: space-between;*/
-    border-radius: 10%;
-    background-color: #F2F2F2;
-}
-
-/*.bloc-hebergements {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    width: 600px;
-    height: 400px;
-    background-color: #F2F2F2;
+    justify-content: flex-start;
     padding: 25px;
-}*/
-
-.bloc-hebergements>h1 {
-    display: flex;
-    text-align: left;
-}
-
-.bloc-hebergements>h2 {
-    display: flex;
-    text-align: left;
+    background-color: #F2F2F2;
+    border-radius: 5%;
 }
 
 .bloc-hebergements>.articles {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between; 
-    align-items: flex-start;
-    row-gap: 12.5px;
+    row-gap: 25px;
+    column-gap: 25px;
 }
-.bloc-hebergements>.articles>.carte-hebergements {
+
+.carte-hebergements-marseille {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    width: 173.5px;
-    height: 135px;
+    max-width: 172px;
+    max-height: 134px;
     background-color: white;
-    border: 2px solid white;
-    border-radius: 10%;
+    border: 1px solid white;
+    border-radius: 5%;
 }
 
-.bloc-hebergements>.articles>.carte-hebergements>.carte-image {
-    display: flex;
-    max-width: 173.5px;
-    height: 77px;
+.carte-hebergements-marseille>img {
+    object-position: top;
     object-fit: cover;
-    object-position: top center;
 }
 
-/*.bloc-hebergements>.carte-hebergements {
-    display: block;
-    width: 173.5px;
-    height: 135px;
-    margin: 0px / auto;
-    background-color: white;
-    border: 2px solid white;
-    border-radius: 10%;
-   
-    //display: block;
-    position: relative;
-    overflow: hidden;
-    box-sizing: border-box;//
-
- .carte-hebergements>.carte-image {
-    height: 77px;
-    position: relative;
-    overflow: hidden;}  
-
-.carte-hebergements>.carte-image>img {
-   // width: 168.5px;
-    height: 86px ;//
-    width: 150%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate (-50%, -50%);
-    /*object-fit: cover;
-    object-position: top center;
-    border-top-left-radius: 10%;
-    border-top-right-radius: 10%;*/
-    
-/*.bloc-hebergements>.carte-hebergements {
-    flex-basis: 0 0 33.3333%;*/   
-
-
-/*---Sous-conteneur Les plus populaires--*/
 .bloc-populaires {
     box-sizing: border-box;
-    padding: 25px;
-    max-width: 30%;
-    max-height: 30%;
     display: flex;
-    flex-flow: column wrap;
-    justify-content: space-between;
-    border-radius: 10%;
-    background-color: #F2F2F2;
-}
-
-.bloc-populaires>.carte-hebergements {
-    box-sizing: border-box;
-    max-width: 14%;
-    max-height: 9% ;
-    display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    gap: 2.5%;
-    padding:2.5%;
-    background-color: white;
-    border: 2px solid white;
-    border-radius: 20%;
+    padding: 25px;
+    background-color: #F2F2F2;
+    border-radius: 5%;
 }
 
-.carte-populaires>img {
-    max-width: 13%px;
-    height: 13%;
+.titre-populaires {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.carte-hebergements-populaires {
+    box-sizing: border-box;
+    width: 238px;
+    height: 91.5px;
+    border-radius: 5%;
+}
+
+.carte-hebergements-populaires img {
+    width: 86.7px;
+    height: 91.5px;
+    float: left;
     object-fit: cover;
-    object-position: left center;
-    border-top-left-radius: 20%;
-    border-bottom-left-radius: 20%;
 }
-*/
+.carte-nom-populaires {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    column-gap: 25px;
+    height: 91.5px;
+    width: 151.3px;
+}  
+.carte-star-rating {
+    margin-left: 2.5px;
+}
+.carte-star-rating>i {
+    color: #0065FC;
+    width: 5px;
+    margin: 1.5px; 
+}
+.carte-star-rating> span {
+    color:#F2F2F2;
+    width: 5px;
+    margin: 1.5px;
+}
 
-/*---Conteneur Activités---*/
-#conteneur-activite {
+
+/*---CONTENEUR ACTIVITES---*/
+#conteneur-activites {
+    width:100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    margin: 25px;
+}
+
+#conteneur-activites>h2 {
+    display: inline-block;
+    justify-content: flex-start; 
+    margin-top: 12.5px;
+    margin-bottom: 12.5px;
+}
+
+.articles-activites {
     box-sizing: border-box;
     width: 100%;
+    height: 90%;
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: row;
     justify-content: space-between;
-    padding: 2.5%;
-    background-color: white;
+    gap: 25px;
 }
 
-.carte-activites>img {
+.activites-une {
     display: flex;
-    max-width: 20%;
-    flex-direction: column;
-    object-fit: cover;
-    object-position: top center;
-    border-top-left-radius: 10%;
-    border-top-right-radius: 10%;
+    width: 25%;
+    height: 100%;
 }
 
+.activites-deux {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 25%;
+    height: 100%;
+}
+
+.carte-activites {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width:100%;
+    height: 100%;
+    overflow: hidden;
+    border: 1px solid #F2F2F2;
+    border-radius: 5%;
+}
+
+.carte-activites img {
+    max-width: 100%;
+    max-height: 90%;
+    object-fit: cover;
+    object-position: 50% 50%;
+}
 
 /*---footer--*/
 .info-site {
@@ -452,6 +443,7 @@ nav a:hover {
 	font-weight: normal;
 	font-size: small;
 	text-align: left;
+    padding-left: none;
     padding-right: 10%; 
 }
 
