--- a/css/stylesBooki2.css
+++ b/css/stylesBooki2.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
     width: 992px;
     margin: auto;
-}
-
-#bloc-page {
     display: flex;
     flex-direction: column;
 }
@@ -20,13 +17,13 @@ body {
 
 h2 {
     font-weight: bold;
-    font-size: large;
+    font-size:medium;
     margin:0px;
 }
 
 h3 {
 	font-weight: bold;
-	font-size:small;
+	font-size:x-small;
     margin:0px;
  	}
 
@@ -45,27 +42,29 @@ p {
 /*---Header VERSION DESKTOP---*/
 
 header {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 2.5%;   
+    padding: 25px;   
 } 
 
 .logo {
     display: flex; 
     justify-content: flex-start;
-    align-items: baseline;
-    padding-top:2.5%;
+    align-items: flex-end;
 }
 
 .logo img {
-   width : 50%;
+    max-width: 40%;
+    height: auto;
+    object-position: 50% 50%;
 }
 
 nav>ul {
     display: flex;
     justify-content: space-between;
-    gap: 25%;
+    gap: 25px;
 }
 
 nav>ul>li {
@@ -74,6 +73,7 @@ nav>ul>li {
 
 ul {
 	list-style: none;
+    padding-left: none;
 }
 
 a {
@@ -101,7 +101,7 @@ nav a:hover {
     header {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         padding: 2.5%;   
     } 
     
@@ -112,7 +112,7 @@ nav a:hover {
     } 
 
     .logo img {
-        width : 25%;
+        width : auto;
      }
 
     nav>ul {
@@ -231,7 +231,7 @@ nav a:hover {
     object-position: left;
     height: 45px;
     width: 45px;
-    padding: 8px;
+    padding: 8px 10px 8px 10px ;
     border-radius: 50%;
     background-color: #DEEBFF;
     color:#0065FC;
@@ -242,7 +242,7 @@ nav a:hover {
     height: 40px;
     width: 40px;
     font-weight: bold;
-    font-size: small;
+    font-size: x-small;
     padding: 8px 8px 8px 0px ;
 }
 
@@ -295,9 +295,6 @@ nav a:hover {
 .bloc-hebergements>h2, h3 {
     display: inline-flex;
 }
-.bloc-hebergements>h2 {
-    padding-bottom: 12.5px;
-}
 
 .bloc-hebergements>.articles {
     box-sizing: border-box;
@@ -308,6 +305,8 @@ nav a:hover {
     flex-wrap: wrap;
     row-gap: 25px;
     column-gap: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 .carte-hebergements-marseille {
@@ -321,22 +320,25 @@ nav a:hover {
     border: 1px solid white;
     border-radius: 5%;
 }
-.carte-hebergements-marseille>.carte-image-marseille {
-    width: auto;
-    height: 61%;
-}
+
 .carte-hebergements-marseille img {
     width: 100%;
-    height: auto ;
+    height: 61%;
     object-position: top;
     object-fit: cover;
-}
-.carte-hebergements-marseille>.carte-nom-marseille {
-    height: 39%;
-    width: auto;
+    border-radius: 5% 5% 0% 0%;
 }
 
+.carte-hebergements-marseille>.carte-nom-marseille {
+    height: 39%;
+    width: 100%;
+    border: 1px solid white; 
+    border-radius: 5%;
+}
+
+
 /*---Sous conteneur populaires--*/
+
 .bloc-populaires {
     width: 39%;
     box-sizing: border-box;
@@ -347,7 +349,6 @@ nav a:hover {
     padding: 25px;
     background-color: #F2F2F2;
     border-radius: 5%;
-    
 }
 
 .titre-populaires {
@@ -362,14 +363,15 @@ nav a:hover {
     background-color: white;
     border: 1px solid white;
     border-radius: 5%;
+    overflow: hidden;
 }
 
 .carte-hebergements-populaires img {
+    box-sizing: border-box;
     width: 37%;
     height: 100%;
     float: left;
     object-fit: cover;
-    object-position: 50% 50%;
     border-radius: 5px 0px 0px 0px;
 }
 .carte-texte-populaires {
@@ -424,7 +426,7 @@ nav a:hover {
 .activites-une {
     display: flex;
     width: 25%;
-    height: 100%;
+    height: auto;
 }
 
 .activites-deux {
@@ -432,7 +434,7 @@ nav a:hover {
     flex-direction: column;
     gap: 25px;
     width: 25%;
-    height: 100%;
+    height: auto;
 }
 
 .carte-activites {
@@ -440,41 +442,37 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     width:100%;
-    height: 100%;
+    height: auto;
     overflow: hidden;
     border: 1px solid #F2F2F2;
     border-radius: 5%;
 }
 
 .carte-activites img {
-    max-width: 100%;
-    max-height: 90%;
+    width: 100%;
+    height: auto;
     object-fit: cover;
     object-position: 50% 50%;
+    border-radius: 5% 5% 0% 0%;
 }
 
 /*---footer--*/
 .info-site {
-    box-sizing: border-content;
-    display: flex;
-    width: 120%;
+    width: 110%;
+    height: 20%;
+    box-sizing: border-box;
+    display:flex;
     flex-direction: row;
-    justify-content: flex-start;
     align-items: flex-start;
     background-color: #F2F2F2;
-    margin: 0% 2,5% 0% 2.5%;
-    padding: 2.5%;
+    gap: 150px;
 }
 
-.titrefooter {
-	font-weight: normal;
-	font-size: small;
-	text-align: left;
-    padding-left: none;
-    padding-right: 10%; 
+
+.titrefooter>h3 {
+    padding-left: 50px;
 }
 
-/*aligner puce et titre _ {list-style-position : outside} ou {text-indent : 2.5%}???*/
-.titrefooter>ul>li {
-    list-style-position: outside;
+.titrefooter>ul {
+    font-size: x-small;
 }
