--- a/css/stylesBooki2.css
+++ b/css/stylesBooki2.css
@@ -9,6 +9,7 @@
 }
 
 body {
+    box-sizing: border-box;
 	font-family: "Raleway", sans-serif;
 	font-style: normal;
 	color:black;	 
@@ -46,13 +47,14 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 25px;   
+    padding: 25px 25px 25px 0px;   
 } 
 
 .logo {
     display: flex; 
     justify-content: flex-start;
     align-items: flex-end;
+    margin-left: 3.5%;
 }
 
 .logo img {
@@ -122,6 +124,7 @@ nav a:hover {
     
     nav a:hover {
         border-bottom: 2px solid #0065FC;
+        border-top: none;
         color:#0065FC;
     }
 
@@ -158,19 +161,31 @@ nav a:hover {
     background-color: #F2F2F2;
 }
 
-.selection {
+.selectionMarseille {
     box-sizing: border-box;
     height: 50px;
     width: 168px;
 }
+.selectionMarseille input {
+    border: none;
+  }
+input::placeholder{
+    color: black;
+    font-size: small;
+    font-weight: bold ;
+}
+ /* input::placeholder {
+    font-size: small;
+    color: black;
+    font-weight: bold;}*/
 
-::placeholder {
+/*::placeholder {
     border: none;
     color: black;
     font-weight: bold;
     font-size: small;
     padding-left: 25px;
-}
+}*/
 
 .bouton-texte {
     height:50px;
@@ -257,14 +272,18 @@ nav a:hover {
 }
 .circle-info>i {
     background-color:white;
-    border-color: solid 2px #F2F2F2;
+    border: 1px solid #F2F2F2;
     border-radius: 50%;
-    padding: 3px;
+    padding: 10px;
     margin-right: 10px;
     color: #0065FC;
 }
 
-/*---Conteneur-hebergements et les plus populaires--*/
+/*--------------------------------
+-------CONTENEUR HEBERGEMENTS ----
+------------------ et------------- 
+-------LES PLUS POPULAIRES--------
+--------------------------------*/
 
 #conteneur-hebergements-populaires {   
     width: 100%;
@@ -277,6 +296,7 @@ nav a:hover {
 
 .carte-nom-marseille span, .carte-nom-populaires span {
     font-weight: bold;}
+
 
 /*---Sous conteneur Hébergements--*/
 
@@ -336,7 +356,6 @@ nav a:hover {
     border-radius: 5%;
 }
 
-
 /*---Sous conteneur populaires--*/
 
 .bloc-populaires {
@@ -352,8 +371,9 @@ nav a:hover {
 }
 
 .titre-populaires {
-    display: inline-flex;
-    margin-bottom: 25px;
+    width: 100%;
+    display: flex;
+    justify-content:space-between;
 }
 
 .carte-hebergements-populaires {
@@ -397,7 +417,10 @@ nav a:hover {
 }
 
 
-/*---CONTENEUR ACTIVITES---*/
+/*---------------------------
+-----CONTENEUR ACTIVITES-----
+----------------------------*/
+
 #conteneur-activites {
     width:100%;
     height: 30%;
@@ -407,6 +430,8 @@ nav a:hover {
 }
 
 #conteneur-activites>h2 {
+    width: 100%;
+    height: 10%;
     display: inline-block;
     justify-content: flex-start; 
     margin-top: 12.5px;
@@ -421,39 +446,76 @@ nav a:hover {
     flex-direction: row;
     justify-content: space-between;
     gap: 25px;
+    align-items: flex-start;
 }
 
-.activites-une {
+.colonne-une {
     display: flex;
     width: 25%;
-    height: auto;
 }
 
-.activites-deux {
+.colonne-deux {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     gap: 25px;
     width: 25%;
-    height: auto;
 }
 
-.carte-activites {
+.carte-grande {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width:100%;
-    height: auto;
-    overflow: hidden;
+    align-items: flex-start;
+    width: 208px;
+    height:307px;
     border: 1px solid #F2F2F2;
     border-radius: 5%;
+    overflow: hidden;
 }
+.carte-moyenne {
+    box-sizing: border-box;
+    display: flex;
+    width: 208px;
+    height: 166px;
+    border: 1px solid #F2F2F2;
+    border-radius: 5%;
+    overflow: hidden;}
 
-.carte-activites img {
+.carte-petite {
+    box-sizing: border-box;
+    display: flex;
+    width: 208px;
+    height: 118px;
+    border: 1px solid #F2F2F2;
+    border-radius: 5%;
+    overflow: hidden;
+    }
+
+.articles-activites h4 {
+    display : inline-block;
+    padding-left: 12.5px;
+    }
+
+.carte-grande img {
     width: 100%;
     height: auto;
     object-fit: cover;
     object-position: 50% 50%;
-    border-radius: 5% 5% 0% 0%;
+}
+
+.carte-moyenne img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: 50% 50%;
+}
+
+.carte-petite img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: 50% 50%;
 }
 
 /*---footer--*/
